# towsand

./: .gitignore  README.md  pyproject.toml  recommendations.md  requirements.txt
.cursor/commands/: compliance-check.md  do-git.md  go-now.md  log-decision.md  portfolio-report.md  recommend.md  scrape-commsec.md  scrape-racq.md  scrape-wise.md  stress-test.md  what-if.md
current-finances/: accounts.md  classification-recommendations.md  institutions.md  portfolio-management-rules.md  strategy-assumptions.md
data/: ib_latest.xml  trades-v3.json
project/: project-overview.md  task-list.md
reports/: 2026-02-17-portfolio-report.md  initial-recommendation-report-260217_1937.md  initial-recommendation-report-260218_0947.md  initial-recommendation-report-260218_v3.md
src/: config.py
src/analytics/: __init__.py  correlation.py  sensitivity.py  stress.py
src/cli/: main.py
src/compliance/: checks.py
src/db/: connection.py  init_schema.py  seed.py
src/market_data/: commsec_importer.py  commsec_scraper.py  flex_report.py  ib_importer.py  price_fetcher.py
src/portfolio/: valuation.py
